# Infographics

./: .gitignore  README.md  main.py  pyproject.toml
pid/: ellipse.py  main.py  matrix_movement_builder.py  mpl_display.py  polygon.py  polygon_rotation.py  square.py  square_translation_but_better.py  transformation.py
stuff/: README  homogeneous_rotation.py  homogeneous_square_translation.py  square.py  square_translation.py
